Updated index.html with meta data and new icon

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>StocksAndSharesSPA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Stocks and Shares is a website that provides access to up to date news, stock prices and historic data on the world stock market.">
+  <meta name="keywords" content="Stocks, Shares, business, news">
+  <link rel="icon" type="image/svg" href="./assets/image/chip.svg">
+  <link rel="icon" type="image/png" href="./assets/image/chip.png">
 </head>
 <body>
   <app-root></app-root>
